# cs153-rca-bot

./: .env.example  README.md  pyproject.toml
codebase_overviews/: nomad-rust.txt  otel-demo.txt  typescript-microservices.txt
oncall/: bot.py  cli.py  constants.py
oncall/agent/: agent.py  agentv2.py  agentv3.py  models.py
oncall/agent/nodes/: code_search.py  log_search.py  models.py  reasoner.py  reviewer.py  utils.py
oncall/chat/: models.py  response_generator.py
oncall/code/: common.py  models.py  preprocess_codebase.py  search.py  tool.py
oncall/lib/: logging.py  ops.py  time.py  utils.py
oncall/logs/: labels.py  query.py  search.py  tool.py  utils.py
